modif affichage index pro

--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="container-all">
   <div class="grid-map">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex flex-column justify-content-center">
       <% @professionals.each do |professional|%>
         <div class="card_pro_index">
           <div class="card_pro grid-index align-items-center">
