mail dans terms

--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -25,7 +25,7 @@
       </p>
       <h2>Contact</h2>
       <p>
-        Si vous avez des questions concernant ces conditions générales, veuillez nous contacter à l'adresse suivante : METTRE LE MAIL DE CONTACT ICI.
+        Si vous avez des questions concernant ces conditions générales, veuillez nous contacter à l'adresse suivante : <a href="mailto:chanlika.servais@gmail.com">Envoyer un email</a>.
       </p>
     </div>
   </div>
