stripe payment ok

--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
+  <%= render "shared/back"%>
 </div>
 <div class="container-all">
   <div>
