--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
+  <%= render "shared/back"%>
 </div>
 <div class="container">
   <div class="row justify-content-center">
