--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,4 +1,6 @@
-
+<div>
+  <%= render "shared/back"%>
+</div>
 <div class="container">
   <h1 class="text-center my-4">Conditions générales</h1>
   <div class="row">
