--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
+  <%= render "shared/back"%>
 </div>
 <div class="container">
   <h1 class="text-center my-4">🐾 Ils cherchent une nouvelle famille 🏠</h1>
