--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
             <%= link_to "A propos", "#", class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Proposer un service", new_professional_path, class: "nav-link text-white" %>
+            <%= link_to "Proposer un service", pricings_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item dropdown d-flex align-items-end flex-column">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
