--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container mt-1">
   <div class="row justify-content-center">
-    <div class="col-12 col-sm-4">
+    <div class="col-11 col-md-6 col-lg-5 col-xl-4">
       <div class="form-devise">
           <i class="fa-solid fa-paw float-end text-primary"></i>
           <h2>Renvoyer les instructions de confirmation</h2>
