--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container mt-1 bg-custom">
   <div class="row justify-content-center">
-    <div class="col-12 col-sm-4">
+    <div class="col-11 col-md-6 col-lg-5 col-xl-4">
       <div class="form-devise">
         <i class="fa-solid fa-paw float-end text-primary"></i>
         <h2>Changer votre mot de passe</h2>
