--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,9 +2,9 @@
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
 </div>
 
-<div class="container">
+<div class="container mt-1 bg-custom">
   <div class="row justify-content-center">
-    <div class="col-12 col-sm-4">
+    <div class="col-11 col-md-6 col-lg-5 col-xl-4">
       <div class="form-devise">
         <i class="fa-solid fa-paw float-end text-primary"></i>
         <h2>Mettre à jour mon profil </h2>
