--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer class="bg-light text-center text-lg-start mt-5" style="sticky-bottom: 0;">
+<footer class="bg-light text-center text-lg-start" style="sticky-bottom: 0;">
   <div class="container p-4">
-    <div class="row">
-      <div class="col-lg-8 col-sm-7">
+    <div class="row d-flex justify-content-center">
+      <div class="col-lg-8 col-md-7 col-sm-7">
         <%= image_tag  "https://res.cloudinary.com/dsbteudoz/image/upload/v1733824548/Boop_-_LOGO_FINAL_RVB_q1laee.png", style:"width: 30%;" %>
       </div>
       <div class="col-lg-4 col-sm-7 d-flex flex-row">
@@ -23,7 +23,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class=" ms-4">
 
               <h5 class="text-uppercase">Suivez-nous</h5>
                       <ul class="list-inline footer-links">
