--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -2,10 +2,11 @@
 <div class="container">
   <h1 class="text-center my-4">Politique de confidentialité</h1>
   <div class="row">
-    <div class="col-md-12">
+    <div class="form-devise">
       <p>
         Nous respectons votre vie privée et nous nous engageons à protéger vos informations personnelles. Cette politique de confidentialité explique comment nous collectons, utilisons et protégeons vos informations.
       </p>
+
       <h2>Collecte des informations</h2>
       <p>
         Nous collectons des informations lorsque vous vous inscrivez sur notre site, passez une commande, vous abonnez à notre newsletter ou remplissez un formulaire. Les informations collectées incluent votre nom, votre adresse e-mail, votre numéro de téléphone et/ou votre carte de crédit.
