--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,10 +13,10 @@
             <%= link_to "Accueil", root_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Contact", "#", class: "nav-link text-white" %>
+            <%= link_to "Contact", terms_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "A propos", "#", class: "nav-link text-white" %>
+            <%= link_to "A propos", about_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
             <%= link_to "Proposer un service", new_professional_path, class: "nav-link text-white" %>
