--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -9,7 +9,7 @@
         <div class="text-center my-5">
           <h1>Confirmation du rendez-vous</h1>
         </div>
-        <div class="text-center rounded-3">
+        <div class="text-center rounded-3" data-controller="alert">
           <%= simple_form_for [@professional, Appointment.new], html:{
             data: {
             controller: "alert",
@@ -22,69 +22,75 @@
             turbo: false,
           }
           } do |a| %>
-            <div class="card d-flex flex-column mb-3">
-              <div class="card-header rounded-3">
-                <i class="fa-regular fa-user"></i>
-                <p> Le vétérinaire :</p>
+            <div data-alert-target="form">
+              <!-- Informations vétérinaire -->
+              <div class="card d-flex flex-column mb-3" >
+                <div class="card-header rounded-3">
+                  <i class="fa-regular fa-user"></i>
+                  <p> Le vétérinaire :</p>
+                </div>
+                <div class="card-body rounded-3">
+                  <h5 class="card-title"><%= @professional.name %></h5>
+                </div>
               </div>
-              <div class="card-body rounded-3">
-                <h5 class="card-title"><%=@professional.name%></h5>
+              <!-- Date du rendez-vous -->
+              <div class="card d-flex flex-column mb-3">
+                <div class="card-header rounded-3">
+                  <i class="fa-regular fa-calendar"></i>
+                  <p> Date du rendez-vous :</p>
+                </div>
+                <div class="card-body rounded-3">
+                  <h5>
+                    <%= a.input :date, as: :string, input_html: { value: @date, readonly: true, style: 'border: none; text-align: center;' }, label: false, required: true %>
+                  </h5>
+                </div>
               </div>
+              <!-- Heure du rendez-vous -->
+              <div class="card d-flex flex-column mb-3">
+                <div class="card-header rounded-3">
+                  <i class="fa-regular fa-clock"></i>
+                  <p> Heure du rendez-vous :</p>
+                </div>
+                <div class="card-body rounded-3">
+                  <h5>
+                    <%= a.input :start_time, as: :string, input_html: { value: @time, readonly: true, style: 'border: none; text-align: center' }, label: false, required: true %>
+                  </h5>
+                </div>
+              </div>
+              <!-- Animal concerné -->
+              <div class="card">
+                <div class="card-header rounded-3">
+                  <i class="fa-solid fa-dog"></i>
+                  <p> Animal concerné :</p>
+                </div>
+                <div class="card-body rounded-3">
+                  <h5>
+                    <%= a.input :pet_id,
+                      label: false,
+                      collection: @current_user_pets,
+                      value_method: :id,
+                      label_method: :name,
+                      prompt: "Choisir un animal",
+                      required: true
+                    %>
+                  </h5>
+                </div>
+              </div>
+              <!-- Motif de la visite -->
+              <div class="card">
+                <div class="card-header rounded-3">
+                  <i class="fa-regular fa-clock"></i>
+                  <p> Motif de la visite :</p>
+                </div>
+                <div class="card-body rounded-3">
+                  <h5>
+                    <%= a.input :reason, label: false, as: :text, input_html: { rows: 3, required: true } %>
+                  </h5>
+                </div>
+              </div>
+              <!-- Bouton de soumission -->
+              <%= a.button :submit, "Confirmer le rendez-vous", class: "btn btn-primary my-4 rounded rounded-4"%>
             </div>
-            <div class="card d-flex flex-column mb-3">
-              <div class="card-header rounded-3">
-                <i class="fa-regular fa-calendar"></i>
-                <p> Date du rendez-vous:</p>
-              </div>
-              <div class="card-body rounded-3">
-                <h5>
-                  <%= a.input :date, as: :string, input_html: { value: @date, readonly: true, style: 'border: none; text-align: center;'  }, label: false %>
-                </h5>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header rounded-3">
-                <i class="fa-regular fa-clock"></i>
-                <p> Heure du rendez-vous:</p>
-              </div>
-              <div class="card-body rounded-3">
-                <h5>
-                  <%= a.input :start_time, as: :string, input_html: { value: @time, readonly: true, style: 'border: none; text-align: center'  }, label: false %>
-                </h5>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="card-header rounded-3">
-                <i class="fa-solid fa-dog"></i>
-                <p> Animal concerné:</p>
-              </div>
-              <div class="card-body rounded-3">
-                <h5>
-                  <%= a.input :pet_id,
-                    label: false,
-                    collection: @current_user_pets,
-                    value_method: :id,   # Utilise l'ID comme valeur enregistrée
-                    label_method: :name, # Affiche le nom du pet dans la liste
-                    prompt: "Choisir un animal" # Texte par défaut pour le dropdown
-                  %>
-                </h5>
-              </div>
-            </div>
-
-
-            <div class="card">
-              <div class="card-header rounded-3">
-                <i class="fa-regular fa-clock"></i>
-                <p> Motif de la visite:</p>
-              </div>
-              <div class="card-body rounded-3">
-                <h5>
-                  <%= a.input :reason, label: false, as: :text, input_html: { rows: 3 }%>
-                </h5>
-              </div>
-            </div>
-            <%= a.button :submit, "Confirmer le rendez-vous", class: "btn btn-primary my-4 rounded rounded-4" %>
           <% end %>
         </div>
         <%# <div class="container text-center shadow-lg p-3 mb-5 bg-body-tertiary rounded"> %>
