page index professionnel : hauteur de photo, taille des heures, retour à la ligne des textes

--- a/app/views/shared/_available_slots.html.erb
+++ b/app/views/shared/_available_slots.html.erb
@@ -1,4 +1,4 @@
-<div class="m-4">
+<div class="m-2">
   <h4>Prochains rendez-vous disponibles</h4>
   <% 7.times do |i| %>
 
@@ -19,10 +19,11 @@
       </a>
 
       <%# show all available slot for appointment %>
-      <div class="d-none d-flex justify-content-between mx-2" data-appointment-selected-target="times" style="display: flex; flex-wrap: wrap;">
+      <div class="d-none d-flex justify-content-center mx-2" data-appointment-selected-target="times" style="display: flex; flex-wrap: wrap;">
         <% ["08:00", "09:00", "10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00"].each do |time| %>
           <a href="<%=new_professional_appointment_path(professional)%>"
               class="btn btn-outline-primary m-1 <%= 'd-none' if @appointment_times.include?(time)%>"
+              style="width: 22%;"
               data-time="<%= time %>"
               data-action="click->appointment-selected#confirm">
             <%= time %>
