--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -9,13 +9,13 @@
           <div class="card_pro grid-index align-items-center">
             <div>
               <a href="<%=professional_path(professional)%>" class="text-decoration-none text-black mx-auto" style="width: 100%;">
-                <%= cl_image_tag professional.photo.key, class:"rounded-3 d-block mx-auto img-fluid", crop: :fill %>
+                <%= cl_image_tag professional.photo.key, class:"rounded-3 d-block mx-auto img-fluid", crop: :fill, style:"max-height: 200px" %>
                 <h2 class="text-center my-3"><%= professional.name %> </h2>
                 <div class="ms-2">
                   <p>Specialité : <%= professional.specialty %></p>
                   <p>Adresse : <%= professional.address %></p>
                 </div>
-                  <p class="text-center"><%= professional.description %></p>
+                  <p class="text-start mx-2 mt-2" style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%= professional.description %></p>
               </a>
             </div>
             <%= render "shared/available_slots", professional: professional%>
