--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -20,7 +20,7 @@
                   <h4 class="text-light"><%= pricing.specialty %></h4>
                 </div>
                 <h1><%= humanized_money_with_symbol(pricing.price) %> </h1>
-                <span>/Monthly</span>
+                <span>/Mois</span>
               </div>
               <div class="pricing-price m-4">
                 <%= form_with url: orders_path do %>
