--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="bg-light text-center text-lg-start" style="sticky-bottom: 0;">
-  <div class="container p-4">
-    <div class="row d-flex justify-content-center">
-      <div class="col-lg-8 col-md-7 col-sm-7">
-        <%= image_tag  "https://res.cloudinary.com/dsbteudoz/image/upload/v1733824548/Boop_-_LOGO_FINAL_RVB_q1laee.png", style:"width: 30%;" %>
+  <div class="container p-2">
+    <div class="row d-flex justify-content-between">
+      <div class="col-lg-8 col-md-7 col-sm-7 text-start">
+        <%= image_tag  "https://res.cloudinary.com/dsbteudoz/image/upload/v1733824548/Boop_-_LOGO_FINAL_RVB_q1laee.png", style:"width: 20%;" %>
       </div>
       <div class="col-lg-4 col-sm-7 d-flex flex-row">
         <div>
@@ -28,13 +28,13 @@
               <h5 class="text-uppercase">Suivez-nous</h5>
                       <ul class="list-inline footer-links">
                           <li class="list-inline-item">
-                              <a href="https://www.instagram.com/boop_officiel/">
+                              <a href="https://www.instagram.com/boop_officiel/" target="_blank">
                                   <i class="fab fa-instagram"></i>
                               </a>
                           </li>
 
                           <li class="list-inline-item">
-                              <a href="https://www.tiktok.com/@boop_officiel?_t=8s9jTobM5eo&_r=1">
+                              <a href="https://www.tiktok.com/@boop_officiel?_t=8s9jTobM5eo&_r=1" target="_blank">
                                   <i class="fab fa-tiktok"></i>
                               </a>
                           </li>
