--- a/app/views/shared/_back.html.erb
+++ b/app/views/shared/_back.html.erb
@@ -1,4 +1,5 @@
 <div class="d-flex flex-row align-items-center">
-  <i class="fa-solid fa-chevron-left text-primary m-4"></i>
-  <%= link_to 'Retour', :back, class:"m-3 text-decoration-none text-dark", style:"font-size: 24px" %>
+  <%= link_to :back, class:"text-decoration-none text-primary", style:"font-size: 16px" do%>
+  <i class="fa-solid fa-chevron-left text-primary ms-4 me-3 mt-3"></i>Retour
+  <% end %>
 </div>
