gestion des heures de rdv

--- a/app/views/shared/_available_slots.html.erb
+++ b/app/views/shared/_available_slots.html.erb
@@ -22,7 +22,7 @@
       <div class="d-none d-flex justify-content-center mx-2" data-appointment-selected-target="times" style="display: flex; flex-wrap: wrap;">
         <% ["08:00", "09:00", "10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00"].each do |time| %>
           <a href="<%=new_professional_appointment_path(professional)%>"
-              class="btn btn-outline-primary m-1 <%= 'd-none' if @appointment_times.include?(time)%>"
+              class="btn btn-outline-primary m-1 <%= 'd-none' if @appointment_times.include?(time) || (Date.parse(date) == Date.today && time < Time.now.strftime('%H:%M')) %>"
               style="width: 22%;"
               data-time="<%= time %>"
               data-action="click->appointment-selected#confirm">
