--- a/app/assets/stylesheets/components/_pricing.scss
+++ b/app/assets/stylesheets/components/_pricing.scss
@@ -32,6 +32,7 @@
 	font-weight: 600;
 	margin-top: 30px;
 	margin-bottom: 5px;
+  font-size: 26px;
 }
 
 .single-pricing ul{list-style:none;margin-top: 30px;}
