--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -3,17 +3,17 @@
 </div>
 <section id="pricing" class="pricing-content section-padding">
   <div class="container">
-    <div class="section-title text-center mb-3">
-      <h2>Souscription</h2>
+    <div class="section-title text-center mb-3 mt-3">
+      <h3>Souscription</h3>
       <p class="mb-3">Choisissez un service à proposer...</p>
     </div>
     <div class="row flex-nowrap overflow-auto text-center custom-scroll mt-2">
       <% @pricings.each do |pricing| %>
         <div class="wow fadeInUp m-2" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.1s; animation-name: fadeInUp; width: 400px">
-          <div class="pricing_design">
+          <div class="pricing_design" style="width: auto">
             <div class="single-pricing">
               <div class="price-head">
-                <% index = index = @all_specialty.index { |item| item[:specialty] == pricing.specialty }%>
+                <% index = @all_specialty.index { |item| item[:specialty] == pricing.specialty }%>
                 <% photo = @all_specialty[index][:photo]%>
                 <div class="fit-image text-center"
                       style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=photo%>); border-radius: 20px">
