--- a/app/views/professionals/pro_index.html.erb
+++ b/app/views/professionals/pro_index.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row justify-content-between" style="height: 100%;">
+<div class="d-flex flex-row justify-content-between pro-dashboard-telephone" style="height: 100%;">
   <%# sidebar all my service %>
   <div>
     <%= render "shared/all_service", selected_professional: nil %>
@@ -8,4 +8,9 @@
     <h4> <strong> Bienvenue sur votre tableau de bord </strong></h4>
     <p class="m-4">Veuillez sélectionner un service pour voir votre planning </p>
   </div>
+</div>
+
+
+<div class="pro-dashboard-tablette">
+  <p>Veuillez utiliser un grand écran...</p>
 </div>
