--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -2,9 +2,10 @@
   display: grid;
   grid-template-columns: 1.5fr 1fr;
 
+  // 480 taille téléphone
     @media (max-width: 480px) {
       grid-template-columns: 1fr;
-      
+
     }
   }
 
@@ -14,6 +15,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
 
+    // 768 taille tablette
     @media (max-width: 768px) {
            grid-template-columns: 1fr;
         }
