--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,13 +1,13 @@
 <div>
   <%= render "shared/back"%>
 </div>
-<div class="container">
+<div class="container bg-custom">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-4 col-lg-6">
       <div class="form-devise">
         <i class="fa-solid fa-paw float-end text-primary"></i>
         <div class="text-center my-5">
-          <h1>Confirmation du rendez-vous</h1>
+          <h1>Motif du Rendez-vous</h1>
         </div>
         <div class="text-center rounded-3" data-controller="alert">
           <%= simple_form_for [@professional, Appointment.new], html:{
