--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <%= render "shared/back"%>
 </div>
-<div class="container">
+<div class="container bg-custom">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-4 col-lg-6">
       <div class="form-devise">
