--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -14,7 +14,7 @@
             class: "form-control",
             placeholder: "Rechercher"
         %>
-      <%= submit_tag "Recherche", name: "", class: "btn btn-primary" %>
+      <%= submit_tag "Recherche par ville", name: "", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
