--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,19 +7,19 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse text-end" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav me-auto d-flex align-items-center">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Accueil", root_path, class: "nav-link text-white" %>
+            <%= link_to "Accueil", root_path, class: "nav-link text-white", style:"font-size: 24px" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Contact", terms_path, class: "nav-link text-white" %>
+            <%= link_to "Proposer un service", new_professional_path, class: "nav-link text-white mx-4", style:"font-size: 24px" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "A propos", about_path, class: "nav-link text-white" %>
+            <%= link_to "Contact", terms_path, class: "nav-link text-white", style:"font-size: 24px" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Proposer un service", pricings_path, class: "nav-link text-white" %>
+            <%= link_to "A propos", about_path, class: "nav-link text-white mx-4", style:"font-size: 24px" %>
           </li>
           <li class="nav-item dropdown d-flex align-items-end flex-column">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
