--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,6 +1,3 @@
-<div>
-  <%= render "shared/back"%>
-</div>
 <div class="container bg-custom">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-4 col-lg-6">
@@ -18,8 +15,8 @@
                 <p> Le vétérinaire :</p>
               </div>
               <div class="card-body d-flex justify-content-center align-items-center">
-                <%= image_tag url_for(@appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle me-4"%>
-                <h5 class="card-title"><%=@professional.name%></h5>
+                <%= image_tag url_for(@appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle me-4", style:"object-fit: cover"%>
+                <h6 class="card-title"><%=@professional.name%></h6>
               </div>
             </div>
             <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
@@ -28,7 +25,7 @@
                 <p> Addresse :</p>
               </div>
               <div class="card-body d-flex justify-content-center">
-                <h5 class="card-title"><%= @professional.address %></h5>
+                <h6 class="card-title"><%= @professional.address %></h6>
               </div>
             </div>
             <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
@@ -37,7 +34,7 @@
                 <p> Téléphone :</p>
               </div>
               <div class="card-body d-flex justify-content-center">
-                <h5 class="card-title"><%= @professional.phone %></h5>
+                <h6 class="card-title"><%= @professional.phone.to_s %></h6>
               </div>
             </div>
             <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
@@ -46,7 +43,7 @@
                 <p> Date du rendez-vous:</p>
               </div>
               <div class="card-body d-flex justify-content-center">
-                <h5 class="card-title"><%= @appointment.date.strftime("%d/%m/%Y") %></h5>
+                <h6 class="card-title"><%= @appointment.date.strftime("%d/%m/%Y") %></h6>
               </div>
             </div>
             <div class="card d-flex justify-content-center mb-3", style="width: 90%;">
@@ -55,7 +52,7 @@
                 <p> Heure du rendez-vous:</p>
               </div>
               <div class="card-body d-flex justify-content-center">
-                <h5 class="card-title"><%= @appointment.start_time.strftime("%H:%M") %></h5>
+                <h6 class="card-title"><%= @appointment.start_time.strftime("%H:%M") %></h6>
               </div>
             </div>
           </div>
