--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -3,6 +3,32 @@
 </div>
 
 <div class="container">
+  <div id="carouselExampleSlidesOnly" class="carousel slide rounded-5" data-bs-ride="carousel" style="width: 100%; max-height: 71vh; overflow: hidden;">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734621854/Design_sans_titre_taz0br.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734621854/Design_sans_titre_1_sryfuj.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622498/Design_sans_titre_5_hzjvgu.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622497/Design_sans_titre_6_kojqpk.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622497/Design_sans_titre_4_nyrr0m.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622493/Design_sans_titre_3_y01tpz.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622491/Design_sans_titre_2_yat5du.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+      </div>
+    </div>
+  </div>
+
   <h1 class="text-center my-4">🐾 Ils cherchent une nouvelle famille 🏠</h1>
 <div class="row justify-content-center">
   <div class="col-sm-8 my-3">
