--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -12,9 +12,9 @@
       <%= text_field_tag :query,
             params[:query],
             class: "form-control",
-            placeholder: "Rechercher"
+            placeholder: "Rechercher par ville"
         %>
-      <%= submit_tag "Recherche par ville", name: "", class: "btn btn-primary" %>
+      <%= submit_tag "Recherche", name: "", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
