--- a/app/views/shared/_available_slots.html.erb
+++ b/app/views/shared/_available_slots.html.erb
@@ -2,7 +2,7 @@
   <h4>Prochains rendez-vous disponibles</h4>
   <% 7.times do |i| %>
 
-    <% date = (DateTime.current.to_date + i).strftime('%Y-%m-%d')%>
+    <% date = (DateTime.current.to_date + i).strftime('%d-%m-%Y')%>
 
     <div class="nav-item dropdown" data-controller="appointment-selected", data-appointment-selected-api-key-value=<%=professional.id%>>
       <a href="#" class="btn btn-outline-primary w-100 m-1" data-appointment-selected-target="selectedDate">
