--- a/app/views/shared/_calendar.html.erb
+++ b/app/views/shared/_calendar.html.erb
@@ -3,7 +3,7 @@
   <%= week_calendar(events: @appointments, professional: @professional) do |date, events| %>
     <div>
       <p data-appointment-target="date">
-        <%= date %>
+        <%= date.strftime("%d-%m-%Y") %>
       </p>
       <% events.each do |event| %>
         <p><%= event.user.first_name%> <%= event.user.last_name%></p>
