--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
             <%= link_to "Accueil", root_path, class: "nav-link text-white", style:"font-size: 20px" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Proposer un service", new_professional_path, class: "nav-link text-white mx-4", style:"font-size: 20px" %>
+            <%= link_to "Proposer un service", pricings_path, class: "nav-link text-white mx-4", style:"font-size: 20px" %>
           </li>
           <li class="nav-item active">
             <%= link_to "Contact", terms_path, class: "nav-link text-white", style:"font-size: 20px" %>
