--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,10 +28,10 @@
             <p class="mt-3">Vous n'avez pas d'animaux</p>
             <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734435780/dog-thinking-about-bone-removebg-preview_nlayll.png" alt="pas d'animaux" style="width: 200px; ">
           <% else %>
-            <div class="d-flex flex-row justify-content-center" >
+            <div class="d-flex flex-row justify-content-center align-items-center h-75 hoveredCircleButton" >
               <% @pets.each do |pet| %>
                 <a href="<%=pet_path(current_user, pet)%>" class="text-decoration-none">
-                  <%= cl_image_tag pet.photo.key, width: 150, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"shadow"%>
+                  <%= cl_image_tag pet.photo.key, width: 200, style: "border-radius: 50%; aspect-ratio: 1;", class:"shadow object-fit-cover"%>
                 </a>
               <% end %>
             </div>
