--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -10,3 +10,10 @@
   // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
   transition: transform 0.1s ease, box-shadow 0.1s ease;
 }
+
+.myCircleIcon {
+  background-color: transparent; /* Fond transparent */
+  border-radius: 50%; /* Bordures arrondies */
+  padding: 10px; /* Ajouter un espace autour de l'icône */
+  display: inline-block; /* Assurer que les styles s'appliquent correctement */
+}
